--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8" />
   <title>Promposal for Juju</title>
   <style>
+    /* Darker pink gradient background for better contrast */
     body {
       margin: 0;
       height: 100vh;
+      background: linear-gradient(135deg, #7a1f3f, #d62e77);
+      color: white;
       font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
@@ -15,15 +18,6 @@
       padding-bottom: 200px;
       overflow: hidden;
       cursor: none;
-      animation: bgFade 10s infinite alternate;
-      background: linear-gradient(135deg, #ffe4ec, #ffd6e8, #ffb6d9);
-      background-size: 400% 400%;
-      color: white;
-    }
-
-    @keyframes bgFade {
-      0% { background-position: 0% 50%; }
-      100% { background-position: 100% 50%; }
     }
 
     h1 {
@@ -33,14 +27,36 @@
       max-width: 90%;
       z-index: 10;
       position: relative;
-      color: #fff0f5;
-      text-shadow: 0 0 15px pink;
-      animation: glow 2s infinite alternate;
+      line-height: 1.3;
     }
 
-    @keyframes glow {
-      from { text-shadow: 0 0 10px pink; }
-      to { text-shadow: 0 0 20px #ff69b4; }
+    /* Glowing effect only on the name "Juju" inside the h1 */
+    .glow {
+      color: #ff8ed4;
+      text-shadow:
+        0 0 5px #ff8ed4,
+        0 0 10px #ff8ed4,
+        0 0 20px #ff8ed4,
+        0 0 40px #ff8ed4;
+      transition: text-shadow 1s ease-in-out;
+      animation: pulseGlow 2.5s infinite alternate;
+    }
+
+    @keyframes pulseGlow {
+      0% {
+        text-shadow:
+          0 0 5px #ff8ed4,
+          0 0 10px #ff8ed4,
+          0 0 20px #ff8ed4,
+          0 0 40px #ff8ed4;
+      }
+      100% {
+        text-shadow:
+          0 0 10px #ff66bb,
+          0 0 25px #ff66bb,
+          0 0 40px #ff66bb,
+          0 0 60px #ff66bb;
+      }
     }
 
     .options {
@@ -71,13 +87,6 @@
       max-width: 90%;
       z-index: 10;
       position: relative;
-      opacity: 0;
-      animation: fadeInGallery 2s ease forwards;
-      animation-delay: 1s;
-    }
-
-    @keyframes fadeInGallery {
-      to { opacity: 1; }
     }
 
     .gallery img {
@@ -85,7 +94,7 @@
       height: 300px;
       object-fit: cover;
       border-radius: 15px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
       transition: transform 0.3s ease;
       cursor: pointer;
     }
@@ -100,13 +109,13 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.9);
+      background: rgba(0,0,0,0.85);
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       text-align: center;
-      color: pink;
+      color: #ff66bb;
       font-size: 2.5em;
       z-index: 9999;
       animation: fadeIn 2s ease forwards;
@@ -120,6 +129,7 @@
       }
     }
 
+    /* Heart style for cursor */
     .heart {
       width: 20px;
       height: 20px;
@@ -133,14 +143,27 @@
       will-change: transform, opacity;
       z-index: 99999;
     }
+
+    /* Countdown style */
+    #countdown {
+      margin-top: 15px;
+      font-size: 1.3em;
+      color: #ffd6ea;
+      text-shadow: 0 0 6px #ff66bb;
+      z-index: 10;
+      position: relative;
+      font-weight: 600;
+    }
   </style>
 </head>
 <body>
-  <h1>Juju, would you make me the luckiest guy in the world and ride with me to prom? 💖</h1>
+  <h1><span class="glow">Juju</span>, would you make me the luckiest guy in the world and ride with me to prom? 💖</h1>
+
+  <div id="countdown"></div>
 
   <div class="options" id="checkboxes">
-    <label><input type="checkbox" class="yesBox"> Yes</label>
-    <label><input type="checkbox" class="yesBox"> Yes</label>
+    <label><input type="checkbox" class="yesBox" /> Yes</label>
+    <label><input type="checkbox" class="yesBox" /> Yes</label>
   </div>
 
   <div class="gallery" id="photoGallery">
@@ -152,6 +175,7 @@
     <img src="0be00563-b315-4849-b420-f797ca08bcb7.jpg" alt="Us 6" />
   </div>
 
+  <!-- Hidden audio player -->
   <audio id="promSong" loop>
     <source src="audio.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
@@ -163,6 +187,32 @@
   </div>
 
   <script>
+    // Countdown timer logic
+    const countdownElement = document.getElementById('countdown');
+    const promDate = new Date('July 4, 2025 20:00:00').getTime();
+
+    function updateCountdown() {
+      const now = new Date().getTime();
+      const distance = promDate - now;
+
+      if (distance < 0) {
+        countdownElement.innerHTML = "🎉 The big day is here! 🎉";
+        clearInterval(countdownInterval);
+        return;
+      }
+
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      countdownElement.innerHTML = `⏳ Prom in: ${days}d ${hours}h ${minutes}m ${seconds}s`;
+    }
+
+    const countdownInterval = setInterval(updateCountdown, 1000);
+    updateCountdown();
+
+    // Music + final message logic
     const checkboxes = document.querySelectorAll('.yesBox');
     const audio = document.getElementById('promSong');
     const finalScreen = document.getElementById('finalScreen');
@@ -173,13 +223,14 @@
           audio.play();
           finalScreen.style.display = 'flex';
           checkboxes.forEach(cb => (cb.disabled = true));
+          triggerFireworks();
         }
       });
     });
 
-    // Hearts
+    // Hearts cursor effect (more hearts, faster fade)
     const hearts = [];
-    const maxHearts = 40;
+    const maxHearts = 30;
 
     window.addEventListener('mousemove', e => {
       if (hearts.length >= maxHearts) {
@@ -207,6 +258,43 @@
         if (index > -1) hearts.splice(index, 1);
       }, 400);
     });
+
+    // Fireworks (simple confetti bursts) effect
+    function triggerFireworks() {
+      const colors = ['#ff66bb', '#ff1e56', '#ff85a2', '#ff3e6c', '#ffcce7'];
+      const numParticles = 50;
+
+      for(let i = 0; i < numParticles; i++) {
+        const particle = document.createElement('div');
+        particle.style.position = 'fixed';
+        particle.style.left = (window.innerWidth / 2 + (Math.random() - 0.5) * 200) + 'px';
+        particle.style.top = (window.innerHeight / 2 + (Math.random() - 0.5) * 200) + 'px';
+        particle.style.width = '8px';
+        particle.style.height = '8px';
+        particle.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+        particle.style.borderRadius = '50%';
+        particle.style.opacity = '1';
+        particle.style.pointerEvents = 'none';
+        particle.style.zIndex = 10000;
+        document.body.appendChild(particle);
+
+        const angle = Math.random() * 2 * Math.PI;
+        const distance = Math.random() * 150 + 50;
+
+        particle.animate([
+          { transform: 'translate(0, 0)', opacity: 1 },
+          { transform: `translate(${Math.cos(angle) * distance}px, ${Math.sin(angle) * distance}px)`, opacity: 0 }
+        ], {
+          duration: 1500 + Math.random() * 500,
+          easing: 'ease-out',
+          fill: 'forwards'
+        });
+
+        setTimeout(() => {
+          particle.remove();
+        }, 2000);
+      }
+    }
   </script>
 </body>
 </html>
